search place holder update

--- a/movies.html
+++ b/movies.html
@@ -27,7 +27,7 @@
 
       <!-- <input type="text" oninput="search()"> -->
       <!-- <input type="text" oninput="main()"> -->
-      <input type="text" oninput="debounce(main,1000)" id="search">
+      <input type="text" oninput="debounce(main,1000)" id="search" placeholder="search mmvie">
       <!-- No button should be there for searching movies, it should search with input  -->
     </div>
 
